Deactive livereload and add youtube video

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Tysson
 ---
 
 <div class="island">
-  <%= image_tag 'artwork.jpg', :class => "artwork" %>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <ul class="social">
