--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,9 @@ title: Tysson
 ---
 
 <div class="island">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
+  <div class="responsive-iframe-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 
 <ul class="social">
