--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -61,7 +61,7 @@ a {
 .island {
   width: 100%;
   position: relative;
-  max-width: 400px;
+  max-width: 660px;
   margin: 0 auto;
   transform: translateY(-50%);
   top: 50%;
@@ -70,12 +70,30 @@ a {
     top: 0;
     transform: translateY(0);
   }
+}
 
-  img {
-    max-width: 100%;
+//
+// Responsive iframes
+//
+.responsive-iframe-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+
+  iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
+//
+// Social links
+//
 .social {
   bottom: 24px;
   color: $white;
