Begin transitioning to new layout with CSS adjustments

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,8 +8,11 @@ title: Tysson
   </div>
 </div>
 
+<div class="wordmark"></div>
+
+<div class="band-photograph"></div>
+
 <ul class="social">
-  <li class="social__item social__item--is-text">New music coming soon</li>
   <li class="social__item">
     <a href="https://facebook.com/tysson">Facebook</a>
   </li>
@@ -25,5 +28,5 @@ title: Tysson
 </ul>
 
 <div class="subscribe">
-  <a href="http://eepurl.com/SmRM9">Subscribe</a>
+  <a class="button" href="http://eepurl.com/SmRM9">Subscribe</a>
 </div>
