--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,14 +1,20 @@
 ---
 title: Tysson
 ---
+<div class="wordmark">
+  <h1>Tysson</h1>
+</div>
+
+<div class="listen-link">
+  <a href="https://open.spotify.com/track/1sW0MpoyYaV8GVNFeiZYRl" class="button">Play Bigger on Spotify</a>
+</div>
+
 
 <div class="island">
   <div class="responsive-iframe-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
-
-<div class="wordmark"></div>
 
 <div class="band-photograph"></div>
 
