Demo of enter site button;

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,38 +1,10 @@
 ---
 title: Tysson
 ---
-<div class="wordmark">
-  <h1>Tysson</h1>
-</div>
-
-<div class="listen-link">
-  <a href="https://open.spotify.com/track/1sW0MpoyYaV8GVNFeiZYRl" class="button">Play Bigger on Spotify</a>
-</div>
-
 
 <div class="island">
   <div class="responsive-iframe-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
   </div>
-</div>
-
-<div class="band-photograph"></div>
-
-<ul class="social">
-  <li class="social__item">
-    <a href="https://facebook.com/tysson">Facebook</a>
-  </li>
-  <li class="social__item">
-    <a href="http://www.twitter.com/tyssonband">Twitter</a>
-  </li>
-  <li class="social__item">
-    <a href="https://soundcloud.com/tyssonband">Soundcloud</a>
-  </li>
-  <li class="social__item">
-    <a href="https://www.instagram.com/tyssonband/">Instagram</a>
-  </li>
-</ul>
-
-<div class="subscribe">
-  <a class="button" href="http://eepurl.com/SmRM9">Subscribe</a>
+  <%= link_to 'Enter site', '/home', :class => 'island__button' %>
 </div>
