--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,6 +21,35 @@
   </head>
 
   <body class="<%= page_classes %>">
+    <div class="wordmark">
+      <h1>Tysson</h1>
+    </div>
+
+    <div class="listen-link">
+      <a href="https://open.spotify.com/track/1sW0MpoyYaV8GVNFeiZYRl" class="button">Play Bigger on Spotify</a>
+    </div>
+
+    <div class="band-photograph"></div>
+
+    <ul class="social">
+      <li class="social__item">
+        <a href="https://facebook.com/tysson">Facebook</a>
+      </li>
+      <li class="social__item">
+        <a href="http://www.twitter.com/tyssonband">Twitter</a>
+      </li>
+      <li class="social__item">
+        <a href="https://soundcloud.com/tyssonband">Soundcloud</a>
+      </li>
+      <li class="social__item">
+        <a href="https://www.instagram.com/tyssonband/">Instagram</a>
+      </li>
+    </ul>
+
+    <div class="subscribe">
+      <a class="button" href="http://eepurl.com/SmRM9">Subscribe</a>
+    </div>
+
     <%= yield %>
   </body>
 
