--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -24,6 +24,7 @@ body {
   height: 100%;
   position: relative;
   font-size: 10px;
+  font-family: -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   @media (max-width: 800px) {
     height: auto;
@@ -83,6 +84,25 @@ a:not(.button) {
   }
 }
 
+p {
+  color: $white;
+  text-shadow: 0 1px 0 rgba($black, 0.1);
+  text-transform: lowercase;
+  letter-spacing: 0;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: justify;
+}
+
+h2 {
+  color: $white;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: left;
+  text-transform: lowercase;
+  letter-spacing: 0;
+}
+
 button,
 .button {
   border-color: $white;
@@ -107,6 +127,16 @@ button,
   }
 }
 
+//
+// Bands in town widget
+//
+
+.bands-in-town {
+  background: $white;
+  padding: 40px;
+  border-radius: 4px;
+  box-shadow: 0 10px 20px rgba($black, 0.5);
+}
 
 //
 // Centered content (island)
@@ -121,6 +151,32 @@ button,
   transform: translateY(-50%);
   width: 100%;
   z-index: 11;
+
+  &__button {
+    background-color: rgba($white, 0.1);
+    box-shadow: 0 10px 20px rgba($black, 0.5), inset 0 -1px 1px rgba($black, 0.7), inset 0 1px 1px rgba($white, 0.1);
+    color: $white !important; // im sorry
+    font-weight: 500;
+    height: 56px;
+    line-height: 56px;
+    margin-top: 32px;
+    max-width: 200px;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+
+    @media (max-width: 800px) {
+      margin-top: 16px;
+    }
+
+    &:hover {
+      background-color: rgba($white, 0.2);
+
+      &:after {
+        display: none;
+      }
+    }
+  }
 
   @media (max-width: 800px) {
     transform: translateY(0);
