Update video link and remove internal page link

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,6 @@ title: Tysson
 
 <div class="island">
   <div class="responsive-iframe-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/IvxMAR8bE1s" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/l58QThh2JZQ" frameborder="0" allowfullscreen></iframe>
   </div>
-  <%= link_to 'Enter site', '/home', :class => 'island__button' %>
 </div>
