--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@
     </div>
 
     <div class="listen-link">
-      <a href="https://open.spotify.com/track/1sW0MpoyYaV8GVNFeiZYRl" class="button">Play Bigger on Spotify</a>
+      <a href="https://open.spotify.com/album/1BhOnOYYY05hZnCOHXiFsr" class="button">Listen on Spotify</a>
     </div>
 
     <div class="band-photograph"></div>
@@ -43,6 +43,9 @@
       </li>
       <li class="social__item">
         <a href="https://www.instagram.com/tyssonband/">Instagram</a>
+      </li>
+      <li class="social__item">
+        <a href="https://www.facebook.com/tysson/app/123966167614127/">Tour dates</a>
       </li>
     </ul>
 
