--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -317,6 +317,17 @@ button,
   top: $page-padding;
   z-index: 11;
 
+  a,
+  a:visited {
+    color: #24CF5F;
+    border-color: #24CF5F;
+
+    &:hover {
+      color: darken(#24CF5F, 10%);
+      border-color: darken(#24CF5F, 10%);
+    }
+  }
+
   @media (max-width: 800px) {
     position: relative;
     margin: 0 auto;
